examples/invalid/semanticErr/declaration/basicTypeErr04.wacc
# type mismatch: bool <- int
# Output:
# #semantic error#

#Program:#

begin
  bool b = 1
end
